k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-sim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: virtual-sim
  template:
    metadata:
      labels:
        app: virtual-sim
    spec:
      containers:
      - name: virtual-sim
        image: jagadeeshbabu1601/virtual-sim:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
