k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtual-sim-svc
spec:
  selector:
    app: virtual-sim
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
